# ComfyUI-IF_LLM

./: HF_api.py  IFDisplayOmniNode.py  IFDisplayTextNode.py  IFDisplayTextWildcardNode.py  IFLLMDisplayOmniNode.py  IFLLMDisplayTextNode.py  IFLLMJoinTextNode.py  IFLLMLoadImagesNodeS.py  IFLLMNode.py  IFLLMSaveTextNode.py  IFLLMTextTyperNode.py  IFLoadImagesNodeS.py  IFPromptImaGENNode.py  IFSaveTextNode.py  ListModelsNode.py  README.md  __init__.py  agent_tool.py  anthropic_api.py  deepseek_api.py  env_utils.py  gemini_node.py  groq_api.py  huggingface_api.py  omost.py  project.toml  pyproject.toml  requirements.txt  send_request.py  transformers_api.py  utils.py
IF_AI/presets/: neg_prompts.json  profiles.json
IF_AI/presets/AutoCombo/: combo_settings.yaml
lib_omost/: canvas.py
web/js/: IFLLMDisplayOmniNode.js  IFLLMDisplayTextNode.js  IFLLMDisplayTextWildcardNode.js  IFLLMJoinTextNode.js  IFLLMLoadImagesNodeS.js  IFLLMNode.js  IFLoadImagesNodeS.js  IFPromptImaGENNode.js  ListModelsNode.js
workflows/: CD_Character_Mixer_Simple.json  CD_HYVid_I2V_&_T2V_Native_IFLLM.json  CD_HYVid_I2V_&_T2V_i2VLora_Native.json  CD_HYVid_I2V_Lora_KjWrapper.json  CD_HyVid_V2V_Kj_wrapper.json  Gemini2.json  Gemini2_WF.json  IF_LLM_Create.json  IF_LLM_GGUF_FLUX.json  IF_LLM_HoldMyBeer_art_replication.json  IF_LLM_HoldMyBeer_art_replication_ungruped_nodes.json  IF_LLM_HoldMyBeer_artstyle_replication.json  IF_LLM_OMOST.json  IF_LLM_SDXL.json  IF_PromptImaGEN_FluxRedux.json  IF_PromptImaGEN_FluxRedux_n.json  IF_PromptImaGEN_GGUF&Normal.json  IF_PromptImaGEN_Omost_SD.json
