[project]
name = "comfyui-if_ai_promptimagem"
description = "Generates automatic prompts run batches, supports a lot of systems including QwenVl, Ollama, Transformers or via APIs Anthropic, Groq, OpenAI, Google Gemini, Mistral, xAI you can create your own Profiles (SystemPrompts) it can save prompts to your Hardrive inclued LoadImagesS"
version = "0.0.3"
license = { file = "LICENSE.txt" } 
dependencies = ["anthropic",
"groq",
"mistralai",
"huggingface_hub",
"sentence-transformers",
"IPython",
"python-dotenv",
"nltk",
"tiktoken",
"pydantic",
"rich",
]

[project.urls]
Repository = "https://github.com/if-ai/ComfyUI-IF_AI_PromptImaGen"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "impactframes"
DisplayName = "ComfyUI-IF_AI_PromptImaGen"
Icon = ""
