[project]
name = "comfyui-if_llm"
description = "Run Local and API LLMs, Features Conditioning manipulation via Omost, supports Ollama, LlamaCPP LMstudio, Koboldcpp, TextGen, Transformers or via APIs Anthropic, Groq, OpenAI, Google Gemini, Mistral, xAI and create your own charcters assistants (SystemPrompts) with custom presets and muchmore"
version = "0.0.4"
license = { file = "LICENSE.txt" } 
dependencies = ["anthropic",
"groq",
"mistralai",
"huggingface_hub",
"timm",
"sentence-transformers",
"IPython",
"python-dotenv",
"nltk",
"tiktoken",
"matplotlib",
"plotly",
"kaleido",
"networkx",
"fastparquet",
"pydantic",
"rich",
]

[project.urls]
Repository = "https://github.com/if-ai/ComfyUI-IF_LLM"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "impactframes"
DisplayName = "ComfyUI-IF_LLM"
Icon = ""
